Added skills to course
