# app/controllers/skills/middlewares/params.rb
@@ -1,0 +1,11 @@
+
+module Skills::Middlewares::Params
+  private
+  def get_skill_params
+    params.require(:skill).permit(
+      :id,
+      :skill_id,
+      :course_id
+    )
+  end
+end
